# todo_fullstack

./: .env  .gitignore  Cargo.toml
site/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
site/src/: components.rs  main.rs  models.rs  pages.rs  services.rs
webapi/: .env  Cargo.toml
webapi/migrations/2024-03-29-011545_initial_migration/: up.sql
webapi/migrations/2024-03-31-224928_auditing_for_todos/: down.sql  up.sql
webapi/src/: handlers.rs  main.rs
webapi/src/db/: mod.rs  models.rs  repositories.rs  schema.rs
