[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
site = { path = "../site" }
axum = { version = "0.7.5", features = ["macros"] }
bb8 = "0.8.3"
diesel = { version = "2.1.5", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
